force-app/main/default/objects/SuppliesEk__c/SuppliesEk__c.object-meta.xml
<CustomObject>
    <description>Created by: Emmanuel Kanu</description>
    <label>SuppliesEk</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SuppliesEk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>