force-app/main/default/objects/SuppliesEk__c/fields/ProjectsEk__c.field-meta.xml
<CustomField>
    <fullName>ProjectsEk__c</fullName>
    <description>Created by: EK</description>
    <label>ProjectsEk</label>
    <referenceTo>ProjectsEk__c</referenceTo>
    <relationshipLabel>Supplies</relationshipLabel>
    <relationshipName>Supplies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>