force-app/main/default/objects/SuppliesEk__c/fields/Supply_Type__c.field-meta.xml
<CustomField>
    <fullName>Supply_Type__c</fullName>
    <description>Created by: EK</description>
    <label>Supply Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cedar</fullName>
            </value>
            <value>
                <fullName>Pine</fullName>
            </value>
            <value>
                <fullName>Redwood</fullName>
            </value>
            <value>
                <fullName>Fir</fullName>
            </value>
            <value>
                <fullName>Maple</fullName>
            </value>
            <value>
                <fullName>Spruce</fullName>
            </value>
            <value>
                <fullName>Mahogany</fullName>
            </value>
            <value>
                <fullName>Cherry</fullName>
            </value>
            <value>
                <fullName>Oak</fullName>
            </value>
            <value>
                <fullName>Poplar</fullName>
            </value>
            <value>
                <fullName>Birch</fullName>
            </value>
            <value>
                <fullName>Ash</fullName>
            </value>
            <value>
                <fullName>Walnut</fullName>
            </value>
            <value>
                <fullName>Teak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>